# AllianceAI

./: .dockerignore  .env  .env.example  .gitignore  DEPLOY.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run_local.sh  tunnel-jupyter.ps1
.claude/: settings.local.json
.github/workflows/: ci.yml
alliance-venv/: pyvenv.cfg
alliance-venv/Scripts/: activate  activate.bat
allianceai/: __init__.py  cli.py  orchestrator.py
allianceai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
allianceai/analysis/: data_confidence.py  decision.py  eda.py  health_score.py  highlights.py  price_metrics.py  ratios.py  risk_signals.py
allianceai/core/: config.py  exceptions.py  logging_config.py  storage.py
allianceai/data/: fetcher.py
allianceai/data/edgar/: __init__.py  client.py
allianceai/data/edgar/clean/: 10-K_00000.txt  10-K_00001.txt  10-K_00002.txt  10-K_00003.txt  10-K_00004.txt  10-K_00005.txt  10-K_00006.txt  10-K_00007.txt  10-K_00008.txt  10-K_00009.txt  10-K_00010.txt  10-K_00011.txt  10-K_00012.txt  10-K_00013.txt  10-K_00014.txt  10-K_00015.txt  10-K_00016.txt  10-K_00017.txt  10-K_00018.txt  10-K_00019.txt  (+180 more)
allianceai/models/: anomaly.py  backtest.py  distress.py  factors.py  forecaster.py  prediction_loop.py  scenarios.py
allianceai/reports/: html_report.py
notebooks/: AllianceAI_demo.ipynb
reports/companies/AAPL - Apple Inc/: report.html
reports/indices/QQQM - Invesco NASDAQ 100 ETF/: report.html
tests/: test_health_score.py  test_ratios.py  test_risk_signals.py
(+184 files in other folders)
