[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "allianceai"
version = "0.1.0"
description = "Open-source AI financial analysis engine."
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.0",
    "pandas>=2.2",
    "scipy>=1.13",
    "yfinance>=0.2.50",
    "curl_cffi>=0.7",
    "scikit-learn>=1.5",
    "statsmodels>=0.14",
    "plotly>=5.24",
    "kaleido>=0.2",
    "duckdb>=1.0",
    "python-dotenv>=1.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "requests>=2.32",
    "tenacity>=8.4",
    "beautifulsoup4>=4.12",
    "rich>=13.7",
    "Jinja2>=3.1",
    "anthropic>=0.40",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
allianceai = "allianceai.cli:main"

[tool.setuptools.packages.find]
include = ["allianceai*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
